--- a/kubernetes/newsletter-server/helm-releases/victoria-metrics-k8s-stack/helm-values.yml
+++ b/kubernetes/newsletter-server/helm-releases/victoria-metrics-k8s-stack/helm-values.yml
@@ -284,7 +284,12 @@ vmsingle:
     retentionPeriod: 30d
     replicaCount: 1
     extraArgs: {}
-    storage: null
+    storage:
+      accessModes:
+        - ReadWriteOnce
+      resources:
+        requests:
+          storage: 8Gi
   ingress:
     # -- Enable deployment of ingress for server component
     enabled: false
