chore: deploy CNP for grafana

--- a/kubernetes/newsletter-server/monitoring/grafanainstance.yml
+++ b/kubernetes/newsletter-server/monitoring/grafanainstance.yml
@@ -269,6 +269,26 @@ items:
             - path:
                 type: PathPrefix
                 value: /
-
+  - apiVersion: cilium.io/v2
+    kind: CiliumNetworkPolicy
+    metadata:
+      name: capacitor
+    spec:
+      description: Allow all internet traffic
+      endpointSelector:
+        matchLabels:
+            k8s:app: grafana
+            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: monitoring
+            k8s:io.cilium.k8s.policy.serviceaccount: grafana-sa
+            k8s:io.kubernetes.pod.namespace: monitoring
+      ingress:
+        - fromEntities:
+            - ingress
+          toPorts:
+            - ports:
+                - port: "9000"
+                  protocol: TCP
+              rules:
+                http: [{}]
 kind: List
 metadata: {}
