--- a/kubernetes/newsletter-server/helm-releases/helm-repositories/meysam81-kustomizations.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-repositories/meysam81-kustomizations.yml
@@ -7,3 +7,8 @@ spec:
   url: oci://ghcr.io/meysam81/kustomizations
   ref:
     semver: ">=0.1.0"
+  verify:
+    provider: cosign
+    matchOIDCIdentity:
+      - issuer: "^https://token.actions.githubusercontent.com$"
+        subject: "^https://github.com/meysam81/kustomizations.*$"
