--- a/kubernetes/newsletter-server/gitops/kratos-admin-ui.yml
+++ b/kubernetes/newsletter-server/gitops/kratos-admin-ui.yml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: kratos-admin-ui
+  name: kratos-admin-ui-parent
   namespace: flux-system
 spec:
   force: false
