--- a/blueprints/kratos-admin-ui/httproute.yml
+++ b/blueprints/kratos-admin-ui/httproute.yml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: kratos
+  name: kratos-admin-ui
 spec:
   hostnames:
     - kratos.developer-friendly.blog
