--- a/kubernetes/newsletter-server/helm-releases/helm-repositories/meysam81-kustomizations.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-repositories/meysam81-kustomizations.yml
@@ -6,7 +6,7 @@ spec:
   interval: 12h
   url: oci://ghcr.io/meysam81/kustomizations
   ref:
-    semver: ">=0.1.0"
+    tag: latest
   verify:
     provider: cosign
     matchOIDCIdentity:
