chore: modify the kratos URLs to the new endpoints

--- a/blueprints/kratos-admin-ui/config.json
+++ b/blueprints/kratos-admin-ui/config.json
@@ -1,5 +1,5 @@
 {
-  "kratosAdminURL": "http://kratos-admin",
-  "kratosPublicURL": "http://kratos-public",
+  "kratosAdminURL": "https://kratos-admin.developer-friendly.blog",
+  "kratosPublicURL": "https://auth-server.developer-friendly.blog",
   "reverseProxy": false
 }
