--- a/blueprints/kratos-admin-ui/rule.yml
+++ b/blueprints/kratos-admin-ui/rule.yml
@@ -1,7 +1,7 @@
 apiVersion: oathkeeper.ory.sh/v1alpha1
 kind: Rule
 metadata:
-  name: kratos
+  name: kratos-admin-ui
 spec:
   authenticators:
     - handler: cookie_session
