--- a/kubernetes/newsletter-server/helm-releases/promtail/helm-values.yml
+++ b/kubernetes/newsletter-server/helm-releases/promtail/helm-values.yml
@@ -4,6 +4,8 @@ config:
       basic_auth:
         username: 596709
         password: ${GRAFANA_CLOUD_PASSWORD}
+    - url: http://victoria-logs-single-server.monitoring:9428/insert/loki/api/v1/push?_stream_fields=instance,job,host,app
+      tenant_id: "0:0"
   enableTracing: true
 
 extraArgs:
