chore: deploy VMlogs in monitoring NS

--- a/kubernetes/newsletter-server/gitops/victoria-logs-single.yml
+++ b/kubernetes/newsletter-server/gitops/victoria-logs-single.yml
@@ -12,5 +12,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: monitoring
   timeout: 1m
   wait: false
