chore: deploy VMlogs in monitoring flux-system, again

--- a/blueprints/oathkeeper/referencegrant.yml
+++ b/blueprints/oathkeeper/referencegrant.yml
@@ -13,6 +13,9 @@ spec:
     - group: gateway.networking.k8s.io
       kind: HTTPRoute
       namespace: default
+    - group: gateway.networking.k8s.io
+      kind: HTTPRoute
+      namespace: flux-system
   to:
     - group: ""
       kind: Service
