fix(listmonk): allow https egress

--- a/blueprints/listmonk/ciliumnetworkpolicy.yml
+++ b/blueprints/listmonk/ciliumnetworkpolicy.yml
@@ -26,6 +26,12 @@ spec:
               protocol: ANY
     - toPorts:
         - ports:
+            - port: "443"
+              protocol: TCP
+          rules:
+            http: [{}]
+    - toPorts:
+        - ports:
             - port: "53"
               protocol: ANY
           rules:
