chore(listmonk): add probe and security context to listmonk

--- a/blueprints/listmonk/externalsecret.yml
+++ b/blueprints/listmonk/externalsecret.yml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: listmonk
+  name: listmonk-secrets
 spec:
   data:
   - remoteRef:
