fix(listmonk): pass secrets to pg-isready

--- a/blueprints/listmonk/statefulset.yml
+++ b/blueprints/listmonk/statefulset.yml
@@ -85,6 +85,8 @@ spec:
           envFrom:
             - configMapRef:
                 name: listmonk-envs
+            - secretRef:
+                name: listmonk-secrets
           image: postgres
           name: postgres
           restartPolicy: Always
