chore: specify source gitrepo namespace for all

--- a/kubernetes/newsletter-server/helm-releases/cert-manager/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/cert-manager/helmrelease.yml
@@ -9,7 +9,8 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: cert-manager
-      version: 1.16.x
+        namespace: flux-system
+      version: 1.x
   install:
     createNamespace: true
   interval: 1h
