--- a/blueprints/headlamp/helmrelease.yml
+++ b/blueprints/headlamp/helmrelease.yml
@@ -10,6 +10,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: headlamp
+        namespace: flux-system
       version: 0.x
   interval: 1h
   releaseName: headlamp
