--- a/blueprints/trivy-operator/helmrelease.yml
+++ b/blueprints/trivy-operator/helmrelease.yml
@@ -9,6 +9,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: aquasecurity
+        namespace: flux-system
       version: 0.x
   install:
     createNamespace: true
