--- a/blueprints/victoria-logs-single/helmrelease.yml
+++ b/blueprints/victoria-logs-single/helmrelease.yml
@@ -10,6 +10,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: victoria-metrics
+        namespace: flux-system
       version: 0.x
   interval: 1h
   targetNamespace: monitoring
