--- a/blueprints/victoria-metrics-k8s-stack/helmrelease.yml
+++ b/blueprints/victoria-metrics-k8s-stack/helmrelease.yml
@@ -10,6 +10,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: victoria-metrics
+        namespace: flux-system
       version: 0.x
   interval: 1h
   releaseName: victoria-metrics-k8s-stack
