--- a/kubernetes/newsletter-server/gitops.yml
+++ b/kubernetes/newsletter-server/gitops.yml
@@ -7,8 +7,9 @@ metadata:
 spec:
   interval: 1h
   path: ./kubernetes/newsletter-server/gitops
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
   wait: false
