--- a/kubernetes/newsletter-server/gitops/helm-repositories.yml
+++ b/kubernetes/newsletter-server/gitops/helm-repositories.yml
@@ -11,6 +11,6 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  targetNamespace: auth
+    namespace: flux-system
   timeout: 1m
   wait: false
