--- a/kubernetes/newsletter-server/gitops/kratos.yml
+++ b/kubernetes/newsletter-server/gitops/kratos.yml
@@ -11,6 +11,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
   targetNamespace: auth
   timeout: 5m
   wait: true
