--- a/kubernetes/newsletter-server/helm-releases/external-secrets/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/external-secrets/helmrelease.yml
@@ -9,7 +9,8 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: external-secrets
-      version: 0.10.x
+        namespace: flux-system
+      version: 0.x
   install:
     createNamespace: true
   interval: 1h
