--- a/kubernetes/newsletter-server/helm-releases/promtail/helmrelease.yml
+++ b/kubernetes/newsletter-server/helm-releases/promtail/helmrelease.yml
@@ -9,6 +9,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: grafana
+        namespace: flux-system
       version: 6.16.x
   install:
     createNamespace: true
