--- a/kubernetes/newsletter-server/gitops/helm-repositories.yml
+++ b/kubernetes/newsletter-server/gitops/helm-repositories.yml
@@ -12,5 +12,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  targetNamespace: flux-system
   timeout: 1m
   wait: false
