chore: do not make hcloud volume provisioner the default

--- a/blueprints/hcloud-csi-driver/helm-values.yml
+++ b/blueprints/hcloud-csi-driver/helm-values.yml
@@ -745,5 +745,5 @@ metrics:
 ##
 storageClasses:
   - name: hcloud-volumes
-    defaultStorageClass: true
+    defaultStorageClass: false
     reclaimPolicy: Delete
