chore: create grafana dashboard for CNPG

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -136,7 +136,7 @@ backend k8s
 
 backend k8s_apiserver
   mode http
-  server k8s_apiserver 127.0.0.1:6443 ssl verify none check inter 3000 rise 1 fall 3
+  server k8s_apiserver 127.0.0.1:6443 ssl verify none check inter 3000 rise 1 fall 3 observe layer7
 
 backend not_found
   http-request deny deny_status 404
