chore: create echo-server httproute

--- a/blueprints/oathkeeper/oathkeeper-server-config.yml
+++ b/blueprints/oathkeeper/oathkeeper-server-config.yml
@@ -93,7 +93,8 @@ log:
 mutators:
   header:
     config:
-      headers: {}
+      headers:
+        x-user-id: "{{ print .Subject }}"
     enabled: true
   noop:
     enabled: true
