--- a/blueprints/echo-server/kustomization.yml
+++ b/blueprints/echo-server/kustomization.yml
@@ -6,10 +6,25 @@ configMapGenerator:
 resources:
   - service.yml
   - deployment.yml
+  - ciliumnetworkpolicy.yml
+  - httproute.yml
+  - rule.yml
 
 images:
   - name: ealen/echo-server
     newTag: 0.9.2
+
+replacements:
+  - source:
+      kind: Deployment
+      fieldPath: spec.template.metadata.labels
+    targets:
+      - select:
+          kind: CiliumNetworkPolicy
+        fieldPaths:
+          - spec.endpointSelector.matchLabels
+        options:
+          create: true
 
 commonLabels:
   app.kubernetes.io/instance: echo-server
