chore: send listmonk traffic to oathkeeper for CORS header

--- a/blueprints/listmonk/httproute.yml
+++ b/blueprints/listmonk/httproute.yml
@@ -15,7 +15,8 @@ spec:
   rules:
     - backendRefs:
         - kind: Service
-          name: listmonk
+          name: oathkeeper-proxy
+          namespace: auth
           port: 80
       filters:
         - responseHeaderModifier:
