chore: disable k8s api server burn rate vmrule

--- a/blueprints/victoria-metrics-k8s-stack/helm-values.yml
+++ b/blueprints/victoria-metrics-k8s-stack/helm-values.yml
@@ -161,7 +161,7 @@ defaultRules:
       create: true
       rules: {}
     kubeApiserverBurnrate:
-      create: true
+      create: false
       rules: {}
     kubeApiserverHistogram:
       create: true
