--- a/blueprints/listmonk/rule.yml
+++ b/blueprints/listmonk/rule.yml
@@ -4,7 +4,7 @@ metadata:
   name: listmonk
 spec:
   authenticators:
-    - handler: anonymous
+    - handler: noop
   authorizer:
     handler: allow
   errors:
