--- a/kubernetes/newsletter-server/auth/secured-httproutes/fluxcd-receiver.yml
+++ b/kubernetes/newsletter-server/auth/secured-httproutes/fluxcd-receiver.yml
@@ -45,6 +45,11 @@ items:
         - apiVersion: source.toolkit.fluxcd.io/v1
           kind: GitRepository
           name: flux-system
+        - apiVersion: kustomize.toolkit.fluxcd.io/v1
+          kind: Kustomization
+          name: "*"
+          matchLabels:
+            kustomize.toolkit.fluxcd.io/namespace: flux-system
       secretRef:
         name: fluxcd-receiver-token
       type: github
