chore(auth): allow auth header

--- a/blueprints/oathkeeper/oathkeeper-server-config.yml
+++ b/blueprints/oathkeeper/oathkeeper-server-config.yml
@@ -118,6 +118,7 @@ serve:
       enabled: true
       allowed_headers:
         - accept
+        - authorization
         - content-type
       allowed_methods:
         - GET
