--- a/kubernetes/newsletter-server/gitops/grafana-instance.yml
+++ b/kubernetes/newsletter-server/gitops/grafana-instance.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   force: false
-  interval: 10s
+  interval: 1h
   path: ./blueprints/grafana-instance
   prune: true
   sourceRef:
