--- a/blueprints/victoria-metrics-k8s-stack/helm-values.yml
+++ b/blueprints/victoria-metrics-k8s-stack/helm-values.yml
@@ -282,7 +282,7 @@ vmsingle:
   spec:
     port: "8429"
     # -- Data retention period. Possible units character: h(ours), d(ays), w(eeks), y(ears), if no unit character specified - month. The minimum retention period is 24h. See these [docs](https://docs.victoriametrics.com/single-server-victoriametrics/#retention)
-    retentionPeriod: 30d
+    retentionPeriod: 365d
     replicaCount: 1
     extraArgs: {}
     storage:
@@ -290,7 +290,8 @@ vmsingle:
         - ReadWriteOnce
       resources:
         requests:
-          storage: 8Gi
+          storage: 64Gi
+      storageClassName: hcloud-volumes
   ingress:
     # -- Enable deployment of ingress for server component
     enabled: false
