chore: do not validate k8s stack

--- a/blueprints/victoria-metrics-k8s-stack/helmrelease.yml
+++ b/blueprints/victoria-metrics-k8s-stack/helmrelease.yml
@@ -17,6 +17,8 @@ spec:
   targetNamespace: monitoring
   upgrade:
     crds: CreateReplace
+    disableOpenAPIValidation: true
+    disableSchemaValidation: true
     force: true
   valuesFrom:
     - kind: ConfigMap
