fix(monitoring): modify missing storage class name reference

--- a/blueprints/victoria-logs-single/helm-values.yml
+++ b/blueprints/victoria-logs-single/helm-values.yml
@@ -139,7 +139,7 @@ server:
     annotations: {}
 
     # -- StorageClass to use for persistent volume. Requires server.persistentVolume.enabled: true. If defined, PVC created automatically
-    storageClassName: hcloud-volume
+    storageClassName: hcloud-volumes
 
     # -- Existing Claim name. If defined, PVC must be created manually before volume will be bound
     existingClaim: ""
