chore(monitoring): disable uninstall hooks for VM k8s stack

--- a/blueprints/victoria-metrics-k8s-stack/helmrelease.yml
+++ b/blueprints/victoria-metrics-k8s-stack/helmrelease.yml
@@ -17,6 +17,7 @@ spec:
   targetNamespace: monitoring
   upgrade:
     crds: CreateReplace
+    disableHooks: true
     disableOpenAPIValidation: true
     disableSchemaValidation: true
     force: true
